k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend

spec:
  selector:
    app: backend

  type: NodePort

  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30050
