k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: shopping-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: shopping.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /products
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000

          - path: /health
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
